--- a/vignettes/FastJM.Rmd
+++ b/vignettes/FastJM.Rmd
@@ -34,9 +34,7 @@ Next let us fit a joint model using the following arguments.
 fit <- jmcs(ydata = ydata, cdata = cdata,
                     long.formula = response ~ time + x1,
                     surv.formula = Surv(surv, failure_type) ~ x1 + x2,
-                    ID = "ID",
-                    RE = "time",
-                    model = "interslope")
+                    random = ~ time|ID)
 ```
 
 Look at the model fit
