--- a/README.Rmd
+++ b/README.Rmd
@@ -9,24 +9,20 @@ knitr::opts_chunk$set(
   fig.path = "README-"
 )
 ```
-
 # FastJM
 
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/shanpengli/FastJM/workflows/R-CMD-check/badge.svg)](https://github.com/shanpengli/FastJM/actions)
+<!-- badges: end -->
+
 The `FastJM` package implement efficient computation of semi-parametric joint model of longitudinal and competing risks data.
-
-# Installation
-
-```{r, eval=FALSE}
-library(devtools)
-devtools::install_github("shanpengli/FastJM", build_vignettes = FALSE)
-```
 
 # Example
 
 The `FastJM` package comes with several simulated datasets. To fit a joint model, we use `jmcs` function. 
 
 ```{r, eval=FALSE}
-library(FastJM)
+require(FastJM)
 data(ydata)
 data(cdata)
 fit <- jmcs(ydata = ydata, cdata = cdata, 
