--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 [![](https://cranlogs.r-pkg.org/badges/grand-total/FastJM)](https://cran.r-project.org/package=FastJM)
 [![CRAN_time_from_release](https://www.r-pkg.org/badges/ago/FastJM)](https://cran.r-project.org/package=FastJM)
 [![CRAN_Status_Badge_version_last_release](https://www.r-pkg.org/badges/version-last-release/FastJM)](https://cran.r-project.org/package=FastJM)
+[![R-CMD-check](https://github.com/shanpengli/FastJM/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/shanpengli/FastJM/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 The `FastJM` package implement efficient computation of semi-parametric joint model of longitudinal and competing risks data.
